--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         }
     },
     "lint-staged": {
-        "*.js": [
+        "*./(ts|tsx|js)$/,": [
             "npm run lint:fix",
             "git add"
         ]
