--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build:server": "tsc && webpack -w --env=server_build",
     "build:public": "tsc && webpack -w --env=client_public",
     "start:server": "npm run build:public & npm run build:server & nodemon ./lib/server.prod.js",
-    "lint": "npx eslint 'src/**/*.tsx' 'src/**/*.ts'",
-    "lint:fix": "npx prettier-eslint 'src/**/*.tsx' 'src/**/*.ts' 'package.json' --write",
+    "lint": "npx eslint 'src/**/*.tsx' 'src/**/*.ts' 'src/**/*.js'",
+    "lint:fix": "npx prettier-eslint 'src/**/*.tsx' 'src/**/*.ts' 'src/**/*.js' 'package.json' --write",
     "coverall": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "scriptsComments": {
