--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "express-handlebars": "^3.0.2",
     "extended-define-webpack-plugin": "^0.1.3",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
