--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@grpc/proto-loader": "^0.1.0",
+    "@types/express-handlebars": "0.0.31",
     "async": "^1.5.2",
     "compression": "^1.7.4",
     "cors": "^2.8.4",
