--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.1.0",
     "@types/express-handlebars": "0.0.31",
+    "@types/serialize-javascript": "^1.5.0",
     "async": "^1.5.2",
     "compression": "^1.7.4",
     "cors": "^2.8.4",
@@ -65,7 +66,6 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "serialize-javascript": "^1.4.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
@@ -110,6 +110,7 @@
     "nodemon": "^1.19.0",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
+    "serialize-javascript": "^1.7.0",
     "standard": "^12.0.1",
     "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
