--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.5",
+    "@types/enzyme": "^3.9.2",
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.12",
     "@types/node": "^10.12.18",
