--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run husky"
+      "pre-commit": "npm run husky",
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
