--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "start:server": "npm run build:public & npm run build:server & nodemon ./lib/server.prod.js",
     "lint": "npx eslint 'src/**/*.tsx' 'src/**/*.ts' 'src/**/*.js'",
     "lint:fix": "npx prettier-eslint 'src/**/*.tsx' 'src/**/*.ts' 'src/**/*.js' 'package.json' --write",
-    "coverall": "jest --coverage --coverageReporters=text-lcov | coveralls",
-    "husky": "lint-staged && npm run test "
+    "coverall": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "scriptsComments": {
     "build:client": "build react into a build:: same as react-create package",
@@ -24,7 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run husky",
+      "pre-commit": "lint-staged",
       "pre-push": "npm test"
     }
   },
