--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-    "extends": "standard"
-}
+    "extends": "airbnb",
+    "rules": {
+      "import-name": true,
+      "no-unused-vars": 0,
+      "import/no-unresolved":0,
+      "react/jsx-filename-extension":0,
+      "no-undef":0,
+      "import/no-extraneous-dependencies":0,
+      "react/no-array-index-key":0
+    }
+  }
