--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:public": "tsc && webpack -w --env=client_public",
     "start:server": "npm run build:public & npm run build:server & nodemon ./lib/server.prod.js",
     "lint": "npx eslint 'src/**/*.{ts,tsx,js,jsx}' 'package.json'",
-    "lint:fix": "npx prettier-eslint 'src/**/*.{ts,tsx,js,jsx}' 'package.json' --write",
+    "lint:fix": "npx prettier-eslint 'src/**/*.{ts,tsx,js,jsx}' 'server/**/*.{ts,tsx,js,jsx}' 'package.json' --write",
     "coverall": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "husky": "lint-staged && npm run test "
   },
@@ -86,8 +86,10 @@
     "enzyme-adapter-react-16": "^1.12.1",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
@@ -105,8 +107,6 @@
     "standard": "^12.0.1",
     "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.0",
     "typescript": "^3.4.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
