--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:server": "tsc && webpack -w --env=server_build",
     "build:public": "tsc && webpack -w --env=client_public",
     "start:server": "npm run build:public & npm run build:server & nodemon ./lib/server.prod.js",
-    "lint": "npx eslint 'src/**/*.{ts,tsx,js,jsx}' 'package.json'",
+    "lint": "npx eslint 'src/**/*.{ts,tsx,js,jsx}' 'package.json' --fix",
     "lint:fix": "npx prettier-eslint 'src/**/*.{ts,tsx,js,jsx}' 'server/**/*.{ts,tsx,js,jsx}' 'package.json' --write",
     "coverall": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "husky": "lint-staged && npm run test "
@@ -77,6 +77,9 @@
     "@types/react-redux": "^6.0.11",
     "@types/react-router-dom": "^4.3.1",
     "@types/supertest": "^2.0.7",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "babel-loader": "^8.0.0-beta.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -87,6 +90,7 @@
     "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -107,6 +111,9 @@
     "standard": "^12.0.1",
     "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
+    "tslint": "^5.16.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.4.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
